--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.5",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.75.1",
     "expo": "~54.0.13",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "whatwg-url": "^15.1.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
