--- a/app.json
+++ b/app.json
@@ -2,6 +2,8 @@
   "expo": {
     "name": "sano",
     "slug": "sano",
+    "scheme": "sano",
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
