--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.75.1",
     "expo": "~54.0.13",
+    "expo-linking": "^8.0.8",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "^15.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "whatwg-url": "^15.1.0"
