--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "uuid": "^13.0.0",
     "whatwg-url": "^15.1.0"
   },
   "devDependencies": {
