--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-web-browser": "^15.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-uuid": "^2.0.3",
     "uuid": "^13.0.0",
     "whatwg-url": "^15.1.0"
   },
