--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -23,7 +25,11 @@
     "whatwg-url": "^15.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/react": "~19.1.0",
+    "eslint": "^9.39.1",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-jsdoc": "^61.1.12",
     "typescript": "~5.9.2"
   },
   "private": true
