--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-picker/picker": "^2.11.4",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.75.1",
     "expo": "~54.0.13",
