Edited UI stuff

--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.75.1",
     "expo": "~54.0.25",
-    "expo-linking": "~8.0.9",
     "expo-image-picker": "~17.0.8",
+    "expo-linking": "~8.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-safe-area-context": "4.14.1",
     "react-native-uuid": "^2.0.3",
+    "react-native-web": "^0.21.0",
     "uuid": "^13.0.0",
     "whatwg-url": "^15.1.0"
   },
